--- a/travel/winter25.html
+++ b/travel/winter25.html
@@ -5,10 +5,10 @@ title: Winter 2025 Trip
 
 <!-- Auto-Centered Map Route -->
 <div style="text-align: center;">
-    <iframe src="map_route.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
+    <iframe src="/me/travel/map_route.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
   </div>
   <div style="text-align: center;">
-    <strong>Spring 2025: Europe East to West</strong>
+    <strong>Winter 2025</strong>
   </div>
   
   {% include locations_list.html %}
