--- a/travel/winter24.html
+++ b/travel/winter24.html
@@ -5,7 +5,7 @@ title: Winter 2025 Trip
 
 <!-- Auto-Centered Map Route -->
 <div style="text-align: center;">
-    <iframe src="/me/travel/map_route.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
+    <iframe src="/me/travel/map_route-winter24.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
   </div>
   <div style="text-align: center;">
     <strong>Winter 2025</strong>
