--- a/travel/summer24.html
+++ b/travel/summer24.html
@@ -3,3 +3,9 @@ layout: default
 title: Summer 2024 Trip
 ---
 
+<div style="text-align: center;">
+    <iframe src="/me/travel/map_route-summer24.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
+  </div>
+  <div style="text-align: center;">
+    <strong>Summer 2024</strong>
+  </div>
