--- a/travel/winter23.html
+++ b/travel/winter23.html
@@ -4,4 +4,9 @@ title: Winter 2024 Trip
 ---
 
 
-  
+<div style="text-align: center;">
+    <iframe src="/me/travel/map_route-winter23.html" width="100%" height="500px" style="max-width: 800px; border: none;"></iframe>
+  </div>
+  <div style="text-align: center;">
+    <strong>Winter 2023</strong>
+  </div>
